@@ -51,6 +51,7 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                       'progs/extractProfile.py',
                       'progs/extract3DProfile.py',
                       'progs/plotRSL.py',
+                      'progs/plotRSLloc.py',
 		      'progs/extractCFstats.py',
                       'progs/ran_topo.py',
 		      'progs/extractTS.py',
